--- a/styles/style.css
+++ b/styles/style.css
@@ -251,8 +251,8 @@ ol {
   display: none;
 }
 
-.content__list-item {
-}
+/* .content__list-item {
+} */
 
 .content__card-link {
   display: block;
