--- a/styles/style.css
+++ b/styles/style.css
@@ -120,14 +120,6 @@ ol {
   appearance: none;
 }
 
-.search-form__textfield:focus {
-  outline: none;
-}
-
-.search-form__textfield:active {
-  border: 1px solid white;
-}
-
 .search-form__fieldset-title {
   color: #fff;
   font-family: Fira Sans Condensed;
@@ -135,6 +127,15 @@ ol {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+/* __Кастомная textarea__  */
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__textfield:active {
+  border: 1px solid white;
 }
 
 /* __________чекбоксы_________ */
@@ -156,7 +157,7 @@ ol {
   cursor: pointer;
 }
 
-.search-form__checkbox-list .search-form__label span:hover {
+.search-form__label:hover .search-form__label-text {
   border-bottom: 1px solid white;
 }
 
@@ -243,8 +244,14 @@ input[type="checkbox"]:checked + span {
   background-color: #545050;
 }
 
-.content__card-link:hover {
+.content__card-link:hover h2 {
   text-decoration: underline white;
+  /* border-bottom: 2px solid white; */
+}
+
+.content__card-link:hover p {
+  text-decoration: underline white;
+  /* border-bottom: 2px solid white; */
 }
 
 .content__card-link:focus {
